--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,7 @@
    font-weight: 500;
    line-height: 110%;
    letter-spacing: -0.36px;
+   margin-top: 24px
 }
 
  .reviews-text {
@@ -46,8 +47,8 @@
 
 @media screen and (max-width: 767px) {
    .reviews {
-    padding-top: 80px;
-    padding-bottom: 80px
+    padding-top: 40px;
+    padding-bottom: 40px
    }
  
   .reviews-section-li {
@@ -69,6 +70,7 @@
     flex-direction: column;
     gap: 80px;
     align-items: center;
+    margin-top: 40px
   }
 
   .reviews-title {
@@ -104,8 +106,8 @@
 @media screen and (min-width: 768px){
 
   .reviews {
-    padding-top: 150px;
-    padding-bottom: 150px;
+    padding-top: 75px;
+    padding-bottom: 75px;
   }
   
   .reviews-section-li {
@@ -126,6 +128,7 @@
     align-items: center;
     gap: 32px;
     justify-content: center;
+    margin-top: 75px
   }
 
   .reviews-title {
@@ -149,18 +152,6 @@
 
 
   .reviews-text {text-align: center;font-family: Inter;font-size: 14px;font-style: normal;font-weight: 400;line-height: 18px; /* 128.571% */letter-spacing: -0.28px;max-width: 571px;}
-  .reviews-section-li {
-    border-radius: 24px;
-    background: #FBFBFB;
-    max-width: 335px;
-    padding: 32px 8px;
-    gap: 8px;
-    flex-shrink: 0;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
 
   .reviews-section-li-2 {
     border-radius: 24px;
@@ -222,24 +213,38 @@
 
   .reviews-section-list {
     display: flex;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     align-items: center;
     gap: 26px;
     justify-content: center;
+    margin-top: 75px
 }
   
   .reviews {
-    padding-top: 152px;
-    padding-bottom: 152px;
+    padding-top: 75px;
+    padding-bottom: 75px;
   }
 }
 
 @media screen and (min-width: 1440px) {
    .reviews-section-list {
     display: flex;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     align-items: center;
     gap: 32px;
     justify-content: center;
+   margin-top: 75px
+}
+   
+   .reviews-title {
+    max-width: 854px;
+    color: #fbfbfb;
+    text-align: center;
+    font-family: Inter;
+    font-size: 48px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 48px;
+    letter-spacing: -.96px;
 }
 }
