--- a/src/css/2-form.css
+++ b/src/css/2-form.css
@@ -1,4 +1,4 @@
-feedback-form{
+.feedback-form{
     display: flex;
     flex-direction: column;
     gap:8px;
@@ -47,3 +47,4 @@ feedback-form{
      label{
       width: 360px;
      }
+  
