--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -14,9 +14,16 @@ p:last-child {
 }
 
 ul {
+  display: flex;
+  column-gap: 10px;
   margin: 0;
   padding: 0;
   list-style: none;
+  margin-block-start: 0;
+  margin-block-end: 0;
+  margin-inline-start: 0;
+  margin-inline-end: 0;
+  padding-inline-start: 0;
 }
 
 a {
