--- a/src/partials/vite-promo.html
+++ b/src/partials/vite-promo.html
@@ -1,6 +1,6 @@
 <section class="vite-promo">
   <div class="container">
-    <!-- <div class="wrapper">
+    <div class="wrapper">
       <h2 class="title">
         <span class="gradient">Vite</span>
       </h2>
@@ -30,17 +30,17 @@
           >
         </li>
       </ul>
-    </div> -->
+    </div>
 
     <div class="thumb">
       <!-- Path to images as from index.html file -->
-      <!-- <img
+      <img
         class="pic"
         src="./img/vite-logo.png"
         alt="Vite logo"
         width="640"
         height="640"
-      /> -->
+      />
     </div>
   </div>
 </section>
