--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,11 +1,19 @@
-/* include css partials with default @import url() */
-
+/**
+  |============================
+  | include css partials with
+  | default @import url()
+  |============================
+*/
 @import url('./reset.css');
 @import url('./vite-promo.css');
 @import url('./header.css');
 
+* {
+  box-sizing: border-box;
+}
+
 :root {
-  font-family: 'Montserrat';
+  font-family: Montserrat, Inter, Avenir, Helvetica, Arial, sans-serif;
   font-size: 16px;
   line-height: 24px;
   font-weight: 400;
@@ -19,188 +27,110 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 }
-
-.pagelink {
-  display: inline-flex;
-  font-size: large;
-  margin: 20px 0;
-  padding: 8px 16px;
-  background-color: #4e75ff;
-  border-radius: 10px;
-  color: aliceblue;
-}
-
-.timer {
+.search-form {
   display: flex;
-  column-gap: 24px;
-}
-
-span {
-  display: flex;
+  gap: 8px;
+  align-items: center;
   justify-content: center;
-  letter-spacing: 0px;
-  font-size: large;
-  font-family: 'Montserrat';
-}
-
-span.value {
-  font-size: 40px;
-  line-height: 1.2;
-  font-weight: 400;
-}
-
-span.label {
-  font-size: 16px;
-  line-height: 1.5;
-  font-weight: 400;
-}
-
-button:disabled {
-  font-family: 'Montserrat';
-  font-weight: 500;
-  line-height: 1.5;
-  width: 75px;
-  height: 40px;
-  border: none;
-  border-radius: 8px;
-  font-size: 16px;
-  background-color: #cfcfcf;
-}
-
-button:hover {
-  background-color: #6c8cff;
-}
-
-button {
-  font-family: 'Montserrat';
-  font-weight: 500;
-  line-height: 1.5;
-  color: #ffffff;
-  width: 75px;
-  height: 40px;
-  border: none;
-  border-radius: 8px;
-  font-size: 16px;
-  background-color: #4e75ff;
-}
-
-input#datetime-picker.flatpickr-input {
-  padding-block: 16px;
-  padding: 0;
-  background-color: #ffffff;
-  color: #2e2f42;
-  text-indent: 16px;
-}
-
-#datetime-picker {
-  width: 272px;
-  height: 40px;
-  font-family: 'Montserrat';
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 1.5;
-  border-radius: 4px;
-  border-color: #808080;
-  border-image: none;
-  border-style: solid;
-  border-width: 1px;
+  margin-top: 36px;
   margin-bottom: 32px;
 }
-
-#datetime-picker:hover {
-  border-style: solid;
-  border-color: #000000;
+input[type='text'] {
+  width: 170px;
 }
-
-input#datetime-picker.flatpickr-input:active {
-  border-width: 1px;
-  border-color: #4e75ff;
-  border-style: solid;
-}
-
-fieldset {
-  margin: 20px 0;
+.search-button {
   display: flex;
-  max-width: 360px;
-  column-gap: 30px;
-  padding: 0;
-  border-radius: 1px;
-  border-width: 1px;
-  border-style: solid;
-  border-radius: 4px;
-  border-color: #808080;
-}
-fieldset:hover {
-  border-width: 1px;
-  border-color: #000000;
-}
-
-.delay {
-  display: flex;
-  flex-direction: column;
-  font-family: 'Montserrat';
-  gap: 8px;
-}
-
-legend {
-  border-width: inherit;
-  padding: 0;
-  margin-left: 28px;
-  padding-left: 6px;
-  padding-right: 6px;
-  font-family: 'Montserrat';
-}
-
-.input-delay {
-  height: 40px;
-  border-radius: 4px;
-  border-style: solid;
-  border: 1px;
-  border-color: #808080;
-}
-
-input.input-delay {
-  border-style: solid;
-  max-width: 360px;
-  padding: 0;
-}
-
-.fulfilled {
-  padding-top: 24px;
-  padding-bottom: 8px;
-  padding-left: 48px;
-}
-
-.rejected {
-  padding-top: 24px;
-  padding-bottom: 8px;
-  padding-left: 48px;
-}
-
-.create-notification {
-  width: 360px;
-  height: 40px;
-  font-family: 'Montserrat';
+  align-items: center;
+  font-family: 'Montserrat', sans-serif;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #fff;
+
+  border-radius: 8px;
+  padding: 8px 16px;
+  width: 70px;
+  height: 24px;
+  border: none;
+  background-color: #4e75ff;
 }
 
-.create-notification:hover {
-  background-color: #6c8cff;
+.list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 24px;
+}
+.list-item {
+  width: 360px;
+  height: 300px;
+  border: 2px solid #242424;
+}
+.information-list {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  margin-top: 15px;
+}
+.gallery-image {
+  display: block;
+  width: 100%;
+  height: 200px;
+}
+.main-info {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 600;
+  font-size: 16px;
 
+  line-height: 2;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+}
+.info {
+  font-family: 'Montserrat', sans-serif;
+
+  font-size: 16px;
+}
+.item-information-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-input[type='radio' i] {
-  background-color: initial;
-  cursor: pointer;
-  appearance: auto;
+/* Бігунок завантаження  */
+.loader {
+  margin: auto;
+  width: 48px;
+  height: 48px;
+  border-radius: 50%;
+  display: block;
+  border-top: 4px solid blue;
+  border-right: 4px solid transparent;
   box-sizing: border-box;
-  margin: 3px 3px 0px 5px;
-  padding: initial;
-  border: initial;
+  animation: rotation 1s linear infinite;
 }
-
-.pagelink:hover {
-  background-color: #6c8cff;
+.loader::after {
+  content: '';
+  box-sizing: border-box;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 48px;
+  height: 48px;
+  border-radius: 50%;
+  border-left: 4px solid yellow;
+  border-bottom: 4px solid transparent;
+  animation: rotation 0.5s linear infinite reverse;
+}
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
