--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,136 +1,144 @@
-/**
-  |============================
-  | include css partials with
-  | default @import url()
-  |============================
-*/
-@import url('./reset.css');
-@import url('./vite-promo.css');
-@import url('./header.css');
-
 * {
   box-sizing: border-box;
 }
 
-:root {
-  font-family: Montserrat, Inter, Avenir, Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  line-height: 24px;
-  font-weight: 400;
+ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
 
-  color: #242424;
-  background-color: rgba(255, 255, 255, 0.87);
+button {
+  cursor: pointer;
+}
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
 }
-.search-form {
-  display: flex;
-  gap: 8px;
-  align-items: center;
-  justify-content: center;
-  margin-top: 36px;
-  margin-bottom: 32px;
-}
-input[type='text'] {
-  width: 170px;
-}
-.search-button {
-  display: flex;
-  align-items: center;
-  font-family: 'Montserrat', sans-serif;
-  font-weight: 500;
+
+body {
+  font-family: Montserrat, sans-serif;
   font-size: 16px;
   line-height: 1.5;
-  letter-spacing: 0.04em;
-  color: #fff;
+  font-weight: 400;
+  color: #2e2f42;
+  background-color: transparent;
+}
 
-  border-radius: 8px;
+.search-form {
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  gap: 8px;
+  margin-top: 36px;
+}
+
+.search-input {
+  width: 272px;
+  height: 40px;
   padding: 8px 16px;
-  width: 70px;
-  height: 24px;
+  border-radius: 4px;
+  border: 1px solid #808080;
+  color: #2e2f42;
+  margin-bottom: 25px;
+}
+
+.search-input-form::placeholder {
+  color: #808080;
+  letter-spacing: 0.04em;
+}
+
+.search-input-form:hover {
+  border-color: #000;
+}
+
+
+
+.btn-search {
+  width: 91px;
+  height: 40px;
+  display: flex;
+  padding: 8px 16px;
+  justify-content: center;
+  align-items: center;
   border: none;
+  border-radius: 8px;
   background-color: #4e75ff;
-}
-
-.list {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-  gap: 24px;
-}
-.list-item {
-  width: 360px;
-  height: 300px;
-  border: 2px solid #242424;
-}
-.information-list {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 10px;
-  margin-top: 15px;
-}
-.gallery-image {
-  display: block;
-  width: 100%;
-  height: 200px;
-}
-.main-info {
-  font-family: 'Montserrat', sans-serif;
-  font-weight: 600;
+  color: #fff;
   font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+}
 
+.btn-search-form:hover,
+.btn-search-form:focus {
+  background-color: #6c8cff;
+}
+
+.gallery{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 24px;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+}
+.photo {
+  width: 400px;
+  height: 300px;
+  object-fit: cover;
+}
+
+.photo-data {
+  justify-content: center;
+  display: flex;
+  align-items: center;
+  column-gap: 28px;
+  width: 100%;
+  height: 48px;
+}
+
+.photo-data-detail {
+  text-align: center;
+  color: #2e2f42;
+ font-size: 12px;
+  font-weight: 400;
   line-height: 2;
   letter-spacing: 0.04em;
-  color: #2e2f42;
 }
-.info {
-  font-family: 'Montserrat', sans-serif;
 
-  font-size: 16px;
+.info {
+  font-weight: 600;
+  line-height: 1.33;
 }
-.item-information-container {
-  display: flex;
-  flex-direction: column;
+.photos-block{
+border: 1px solid grey;
+}
+
+.loader {
+  width: 48px;
+  height: 48px;
+  border-radius: 50%;
+  position: relative;
+  top: 80px;
+  left: 650px;
+  animation: rotate 1s linear infinite;
+}
+
+.load {
+  background: #4e75ff;
+  border-radius: 8px;
+  width: 125px;
+  height: 40px;
+  display: none;
   justify-content: center;
   align-items: center;
+  border: none;
+  color: #fff;
+  margin: 40px auto;
 }
 
-/* Бігунок завантаження  */
-.loader {
-  margin: auto;
-  width: 48px;
-  height: 48px;
-  border-radius: 50%;
-  display: block;
-  border-top: 4px solid blue;
-  border-right: 4px solid transparent;
-  box-sizing: border-box;
-  animation: rotation 1s linear infinite;
-}
-.loader::after {
-  content: '';
-  box-sizing: border-box;
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 48px;
-  height: 48px;
-  border-radius: 50%;
-  border-left: 4px solid yellow;
-  border-bottom: 4px solid transparent;
-  animation: rotation 0.5s linear infinite reverse;
-}
-@keyframes rotation {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
-}
