--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,144 +1,158 @@
-* {
-  box-sizing: border-box;
-}
+@import url('./reset.css');
+:root {
+  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 400;
 
-ul {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-}
+  color: #242424;
+  background-color: rgba(255, 255, 255, 0.87);
 
-button {
-  cursor: pointer;
-}
-
-img {
-  display: block;
-  max-width: 100%;
-  height: auto;
+  font-synthesis: none;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-text-size-adjust: 100%;
 }
 
 body {
-  font-family: Montserrat, sans-serif;
-  font-size: 16px;
+  padding-top: 20px;
+  max-width: 1440px;
+  min-height: 100%;
+  margin: 0;
+  font-family: sans-serif;
   line-height: 1.5;
-  font-weight: 400;
-  color: #2e2f42;
-  background-color: transparent;
+
 }
 
 .search-form {
-  margin: 0 auto;
+  list-style-type: none;
+  
+
+    display: flex;
+    flex-wrap: wrap;
+    gap: 24px 24px;
+    margin: auto;
+    justify-content: center;
+    padding: 0;
+    align-items: center;
+    padding-left: 110px;
+}
+input[type='text'] {
+  width: 360px;
+  font-size: 14px;
+  border: 1px solid #110e0e;
+}
+.button {
   display: flex;
-  justify-content: center;
-  gap: 8px;
-  margin-top: 36px;
-}
-
-.search-input {
-  width: 272px;
-  height: 40px;
-  padding: 8px 16px;
-  border-radius: 4px;
-  border: 1px solid #808080;
-  color: #2e2f42;
-  margin-bottom: 25px;
-}
-
-.search-input-form::placeholder {
-  color: #808080;
-  letter-spacing: 0.04em;
-}
-
-.search-input-form:hover {
-  border-color: #000;
-}
-
-
-
-.btn-search {
-  width: 91px;
-  height: 40px;
-  display: flex;
-  padding: 8px 16px;
   justify-content: center;
   align-items: center;
-  border: none;
-  border-radius: 8px;
-  background-color: #4e75ff;
-  color: #fff;
-  font-size: 16px;
+  font-family: 'Montserrat', sans-serif;
   font-weight: 500;
-  line-height: 1.5;
+  font-size: 10px;
   letter-spacing: 0.04em;
-}
+  color: #fff;
 
-.btn-search-form:hover,
-.btn-search-form:focus {
+  border-radius: 4px;
+  padding: 8px 16px;
+  width: 70px;
+  height: 24px;
+  border: none;
+  background-color: #4e75ff;
+}
+.button-wrapper {
+  margin: 20px;
+  width: 70px;
+  height: 40px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+ 
+}
+button:hover,
+button:focus {
   background-color: #6c8cff;
 }
 
-.gallery{
+.list {
   display: flex;
-  flex-direction: row;
+  justify-content: center;
+  gap: 16px;
   flex-wrap: wrap;
-  gap: 24px;
-  justify-content: center;
-  align-items: center;
-  margin: 0 auto;
-}
-.photo {
-  width: 400px;
-  height: 300px;
-  object-fit: cover;
+  margin-top: 20px;
+  margin-left: 20px;
 }
 
-.photo-data {
-  justify-content: center;
+.list-item{
+  border: 1px solid #110e0e;
+  border-radius: 10px;
+}
+
+.information-list {
   display: flex;
-  align-items: center;
-  column-gap: 28px;
+  font-size: 8px;
+  justify-content: space-around;
+}
+.item-information-container {
+display: flex;
+
+gap: 6px;
+flex-direction: column;
+}
+
+.gallery-image {
+  display: block;
+  border-radius: 10px;
+  width: 360px;
+  height: 240px;
+  contain: content;
+
+}
+.gallery-image:hover,
+.gallery-image:focus{
+    transform: scale(1.04);
+    transition: all 0.25s ease-in;
+}
+
+form {
+  margin-top: 60px;
+  margin-left: 200px;
+}
+input {
+  width: 272px;
+  height: 24px;
+  padding: 8px, 16px;
+  border-radius: 4px;
+}
+input:active, input:hover {
+  border-color: #082694;
+}
+
+
+
+.mask{
   width: 100%;
-  height: 48px;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  top: 50%;
 }
 
-.photo-data-detail {
-  text-align: center;
-  color: #2e2f42;
- font-size: 12px;
-  font-weight: 400;
-  line-height: 2;
-  letter-spacing: 0.04em;
-}
-
-.info {
-  font-weight: 600;
-  line-height: 1.33;
-}
-.photos-block{
-border: 1px solid grey;
+.hidden {
+  opacity: 0;
+  visibility: hidden;
 }
 
 .loader {
-  width: 48px;
-  height: 48px;
+  margin: 0 auto;
+  min-height: 50%;
+  width: 24px;
+  height: 24px;
+  border: 2px solid #f85c01;
+  border-bottom-color: rgb(238, 182, 137);
   border-radius: 50%;
-  position: relative;
-  top: 80px;
-  left: 650px;
-  animation: rotate 1s linear infinite;
-}
-
-.load {
-  background: #4e75ff;
-  border-radius: 8px;
-  width: 125px;
-  height: 40px;
-  display: none;
-  justify-content: center;
-  align-items: center;
-  border: none;
-  color: #fff;
-  margin: 40px auto;
-}
+  display: inline-block;
+  box-sizing: border-box;
+  animation: rotation 1s linear infinite;
 
