--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,4 +1,51 @@
 @import url('./reset.css');
+
+.form {
+  margin-top: 16px;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 371px;
+}
+
+/* Reset styles */
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+}
+
+p:last-child {
+  margin-bottom: 0;
+}
+
+ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+a {
+  color: currentColor;
+  text-decoration: none;
+}
+
+button {
+  cursor: pointer;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  /* height: auto; */
+  object-fit: cover;
+}
+
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+
 :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
   font-size: 16px;
@@ -15,144 +62,151 @@
   -webkit-text-size-adjust: 100%;
 }
 
-body {
-  padding-top: 20px;
-  max-width: 1440px;
-  min-height: 100%;
-  margin: 0;
-  font-family: sans-serif;
-  line-height: 1.5;
-
+* {
+  font-family: 'Montserrat';
 }
 
 .search-form {
-  list-style-type: none;
-  
-
-    display: flex;
-    flex-wrap: wrap;
-    gap: 24px 24px;
-    margin: auto;
-    justify-content: center;
-    padding: 0;
-    align-items: center;
-    padding-left: 110px;
-}
-input[type='text'] {
-  width: 360px;
-  font-size: 14px;
-  border: 1px solid #110e0e;
-}
-.button {
   display: flex;
   justify-content: center;
+  gap: 8px;
   align-items: center;
-  font-family: 'Montserrat', sans-serif;
-  font-weight: 500;
-  font-size: 10px;
-  letter-spacing: 0.04em;
-  color: #fff;
+  padding-top: 30px;
+}
 
-  border-radius: 4px;
-  padding: 8px 16px;
-  width: 70px;
-  height: 24px;
-  border: none;
+.submit-btn {
   background-color: #4e75ff;
-}
-.button-wrapper {
-  margin: 20px;
-  width: 70px;
-  height: 40px;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
- 
-}
-button:hover,
-button:focus {
-  background-color: #6c8cff;
+  color: white;
+  border-radius: 7px;
+  border: none;
+  padding: 8px 16px;
+  font-size: 16px;
+  font-weight: 500;
+  letter-spacing: 0.04em;
+  transition: 0.4s;
 }
 
-.list {
-  display: flex;
-  justify-content: center;
-  gap: 16px;
-  flex-wrap: wrap;
-  margin-top: 20px;
-  margin-left: 20px;
+.submit-btn:hover {
+  background: #6c8cff;
 }
 
-.list-item{
-  border: 1px solid #110e0e;
-  border-radius: 10px;
-}
-
-.information-list {
-  display: flex;
-  font-size: 8px;
-  justify-content: space-around;
-}
-.item-information-container {
-display: flex;
-
-gap: 6px;
-flex-direction: column;
-}
-
-.gallery-image {
-  display: block;
-  border-radius: 10px;
-  width: 360px;
-  height: 240px;
-  contain: content;
-
-}
-.gallery-image:hover,
-.gallery-image:focus{
-    transform: scale(1.04);
-    transition: all 0.25s ease-in;
-}
-
-form {
-  margin-top: 60px;
-  margin-left: 200px;
-}
-input {
-  width: 272px;
-  height: 24px;
-  padding: 8px, 16px;
+.form-control {
+  width: 240px;
+  padding: 8px 16px;
   border-radius: 4px;
+  border: 1px solid #808080;
+  transition: 0.4s;
+  outline: none;
 }
-input:active, input:hover {
-  border-color: #082694;
+
+.form-control:hover {
+  border: 1px solid #000;
 }
 
+.form-control:focus {
+  border: 1px solid #4e75ff;
+}
 
+.form-control::placeholder {
+  color: #808080;
+  font-size: 16px;
+  letter-spacing: 0.04em;
+}
 
-.mask{
-  width: 100%;
-  height: 100%;
+.gallery-container {
   display: flex;
+  gap: 20px;
   justify-content: center;
   align-items: center;
-  top: 50%;
+  padding: 30px 15px;
+}
+
+.gallery-item {
+  width: 100%;
+  height: auto;
+  border: 1px solid #808080;
+}
+
+.images {
+  display: grid;
+  grid-template-columns: repeat(4, 300px);
+  grid-gap: 22px;
+}
+
+.text-content-box {
+  display: flex;
+  gap: 25px;
+  justify-content: center;
+  align-items: center;
+  padding: 10px 30px;
+}
+
+.image-text {
+  font-size: 12px;
+  text-align: center;
+  font-weight: 400;
+}
+
+.image-title {
+  font-weight: 600;
+  font-size: 12px;
+  color: #2e2f42;
+}
+
+.iziToast-close {
+  color: white !important;
+}
+
+.btn-show-more {
+  background-color: #4e75ff;
+  color: white;
+  border-radius: 7px;
+  border: 1px solid white;
+  padding: 8px 16px;
+  font-size: 16px;
+  font-weight: 500;
+  letter-spacing: 0.04em;
+  transition: 0.4s;
+  display: block;
+  margin: 0 auto;
+}
+.loader {
+  width: 48px;
+  height: 48px;
+  border-radius: 50%;
+  display: block;
+  margin: 15px auto;
+  position: relative;
+  box-sizing: border-box;
+  animation: zeroRotation 1s linear infinite alternate;
 }
 
 .hidden {
-  opacity: 0;
-  visibility: hidden;
+  display: none;
 }
-
-.loader {
-  margin: 0 auto;
-  min-height: 50%;
-  width: 24px;
-  height: 24px;
-  border: 2px solid #f85c01;
-  border-bottom-color: rgb(238, 182, 137);
-  border-radius: 50%;
-  display: inline-block;
+.loader::after,
+.loader::before {
+  content: '';
   box-sizing: border-box;
-  animation: rotation 1s linear infinite;
-
+  position: absolute;
+  left: 0;
+  top: 0;
+  background: rgb(22, 155, 165);
+  width: 16px;
+  height: 16px;
+  transform: translate(-50%, 50%);
+  border-radius: 50%;
+}
+.loader::before {
+  left: auto;
+  right: 0;
+  transform: translate(50%, 100%);
+}
+@keyframes zeroRotation {
+  0% {
+    transform: scale(1) rotate(0deg);
+  }
+  100% {
+    transform: scale(0) rotate(360deg);
+  }
+}
