--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,210 +1,154 @@
-@import url('./reset.css');
-
-.form {
-  margin-top: 16px;
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 371px;
+body {
+  font-family: "Montserrat", Arial, Helvetica, sans-serif;
 }
 
-/* Reset styles */
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p {
+ul,
+ol {
+  list-style-type: none;
   margin: 0;
-}
-
-p:last-child {
-  margin-bottom: 0;
-}
-
-ul {
-  margin: 0;
-  padding: 0;
-  list-style: none;
+  padding-left: 0;
 }
 
 a {
-  color: currentColor;
   text-decoration: none;
-}
-
-button {
   cursor: pointer;
 }
 
 img {
   display: block;
   max-width: 100%;
-  /* height: auto; */
-  object-fit: cover;
 }
 
-:root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  line-height: 24px;
-  font-weight: 400;
-
-  color: #242424;
-  background-color: rgba(255, 255, 255, 0.87);
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
-}
-
-* {
-  font-family: 'Montserrat';
-}
-
-.search-form {
+.form {
+  width: 371px;
+  height: 40px;
+  margin-top: 36px;
   display: flex;
-  justify-content: center;
   gap: 8px;
-  align-items: center;
-  padding-top: 30px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
-.submit-btn {
-  background-color: #4e75ff;
-  color: white;
-  border-radius: 7px;
-  border: none;
-  padding: 8px 16px;
-  font-size: 16px;
-  font-weight: 500;
-  letter-spacing: 0.04em;
-  transition: 0.4s;
-}
-
-.submit-btn:hover {
-  background: #6c8cff;
-}
-
-.form-control {
-  width: 240px;
-  padding: 8px 16px;
-  border-radius: 4px;
+input {
   border: 1px solid #808080;
-  transition: 0.4s;
-  outline: none;
+  border-radius: 4px;
+  width: 272px;
 }
 
-.form-control:hover {
+input:hover {
   border: 1px solid #000;
 }
 
-.form-control:focus {
+input:focus {
+  padding-left: 16px;
   border: 1px solid #4e75ff;
+  outline: none;
 }
 
-.form-control::placeholder {
-  color: #808080;
-  font-size: 16px;
-  letter-spacing: 0.04em;
-}
-
-.gallery-container {
-  display: flex;
-  gap: 20px;
-  justify-content: center;
-  align-items: center;
-  padding: 30px 15px;
-}
-
-.gallery-item {
-  width: 100%;
-  height: auto;
-  border: 1px solid #808080;
-}
-
-.images {
-  display: grid;
-  grid-template-columns: repeat(4, 300px);
-  grid-gap: 22px;
-}
-
-.text-content-box {
-  display: flex;
-  gap: 25px;
-  justify-content: center;
-  align-items: center;
-  padding: 10px 30px;
-}
-
-.image-text {
-  font-size: 12px;
-  text-align: center;
+input::placeholder {
   font-weight: 400;
-}
-
-.image-title {
-  font-weight: 600;
-  font-size: 12px;
-  color: #2e2f42;
-}
-
-.iziToast-close {
-  color: white !important;
-}
-
-.btn-show-more {
-  background-color: #4e75ff;
-  color: white;
-  border-radius: 7px;
-  border: 1px solid white;
-  padding: 8px 16px;
   font-size: 16px;
-  font-weight: 500;
+  line-height: 1.5;
   letter-spacing: 0.04em;
-  transition: 0.4s;
-  display: block;
-  margin: 0 auto;
+  color: #808080;
+  padding-left: 16px;
 }
+
+input:focus::placeholder {
+  transform: translateX(-16px);
+}
+
+button {
+  cursor: pointer;
+  border: none;
+  border-radius: 8px;
+  padding: 8px 16px;
+  width: 91px;
+  color: #fff;
+  background: #4e75ff;
+}
+
+button:hover,
+button:focus {
+  background-color: #6c8cff;
+}
+
+.load-more-button {
+  width: 125px;
+  height: 40px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 50px;
+}
+
 .loader {
   width: 48px;
   height: 48px;
+  border: 5px solid #fff;
+  border-bottom-color: #ff3d00;
   border-radius: 50%;
-  display: block;
-  margin: 15px auto;
-  position: relative;
+  display: inline-block;
   box-sizing: border-box;
-  animation: zeroRotation 1s linear infinite alternate;
+  animation: rotation 1s linear infinite;
+  margin-top: 100px;
+  position: fixed;
+  left: 50%;
 }
 
-.hidden {
-  display: none;
-}
-.loader::after,
-.loader::before {
-  content: '';
-  box-sizing: border-box;
-  position: absolute;
-  left: 0;
-  top: 0;
-  background: rgb(22, 155, 165);
-  width: 16px;
-  height: 16px;
-  transform: translate(-50%, 50%);
-  border-radius: 50%;
-}
-.loader::before {
-  left: auto;
-  right: 0;
-  transform: translate(50%, 100%);
-}
-@keyframes zeroRotation {
+@keyframes rotation {
   0% {
-    transform: scale(1) rotate(0deg);
+    transform: rotate(0deg);
   }
   100% {
-    transform: scale(0) rotate(360deg);
+    transform: rotate(360deg);
   }
+}
+
+.container {
+  display: flex;
+  margin: 0 auto;
+}
+
+.gallery {
+  margin: 50px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 24px;
+}
+
+.gallery-item {
+  flex-shrink: 0;
+  flex-basis: calc((100% - 48px) / 3);
+  display: flex;
+  flex-direction: column;
+  border: 1px solid #808080;
+}
+
+.gallery-image {
+  width: 100%;
+  height: 300px;
+  object-fit: cover;
+}
+
+.stats {
+  flex-shrink: 0;
+  display: flex;
+  justify-content: space-around;
+  border-bottom: 1px solid #808080;
+  border-left: 1px solid #808080;
+  border-right: 1px solid #808080;
+  background: #fff;
+  padding-bottom: 11px;
+  height: 48px;
+}
+
+.text {
+  text-align: center;
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 1.33;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+  padding-bottom: 11px;
 }
