--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,154 +1,143 @@
-body {
-  font-family: "Montserrat", Arial, Helvetica, sans-serif;
+* {
+  box-sizing: border-box;
 }
 
-ul,
-ol {
-  list-style-type: none;
+ul {
   margin: 0;
-  padding-left: 0;
+  padding: 0;
+  list-style: none;
 }
 
-a {
-  text-decoration: none;
+button {
   cursor: pointer;
 }
 
 img {
   display: block;
   max-width: 100%;
+  height: auto;
 }
 
-.form {
-  width: 371px;
-  height: 40px;
-  margin-top: 36px;
-  display: flex;
-  gap: 8px;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-input {
-  border: 1px solid #808080;
-  border-radius: 4px;
-  width: 272px;
-}
-
-input:hover {
-  border: 1px solid #000;
-}
-
-input:focus {
-  padding-left: 16px;
-  border: 1px solid #4e75ff;
-  outline: none;
-}
-
-input::placeholder {
-  font-weight: 400;
+body {
+  font-family: Montserrat, sans-serif;
   font-size: 16px;
   line-height: 1.5;
-  letter-spacing: 0.04em;
+  font-weight: 400;
+  color: #2e2f42;
+  background-color: transparent;
+}
+
+.search-form {
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  gap: 8px;
+  margin-top: 36px;
+}
+
+.search-input {
+  width: 272px;
+  height: 40px;
+  padding: 8px 16px;
+  border-radius: 4px;
+  border: 1px solid #808080;
+  color: #2e2f42;
+  margin-bottom: 25px;
+}
+
+.search-input-form::placeholder {
   color: #808080;
-  padding-left: 16px;
+  letter-spacing: 0.04em;
 }
 
-input:focus::placeholder {
-  transform: translateX(-16px);
+.search-input-form:hover {
+  border-color: #000;
 }
 
-button {
-  cursor: pointer;
+
+
+.btn-search {
+  width: 91px;
+  height: 40px;
+  display: flex;
+  padding: 8px 16px;
+  justify-content: center;
+  align-items: center;
   border: none;
   border-radius: 8px;
-  padding: 8px 16px;
-  width: 91px;
+  background-color: #4e75ff;
   color: #fff;
-  background: #4e75ff;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
 }
 
-button:hover,
-button:focus {
+.btn-search-form:hover,
+.btn-search-form:focus {
   background-color: #6c8cff;
 }
 
-.load-more-button {
-  width: 125px;
-  height: 40px;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: 50px;
+.gallery{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 24px;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+}
+.photo {
+  width: 400px;
+  height: 300px;
+  object-fit: cover;
+}
+
+.photo-data {
+  justify-content: center;
+  display: flex;
+  align-items: center;
+  column-gap: 28px;
+  width: 100%;
+  height: 48px;
+}
+
+.photo-data-detail {
+  text-align: center;
+  color: #2e2f42;
+ font-size: 12px;
+  font-weight: 400;
+  line-height: 2;
+  letter-spacing: 0.04em;
+}
+
+.info {
+  font-weight: 600;
+  line-height: 1.33;
+}
+.photos-block{
+border: 1px solid grey;
 }
 
 .loader {
   width: 48px;
   height: 48px;
-  border: 5px solid #fff;
-  border-bottom-color: #ff3d00;
   border-radius: 50%;
-  display: inline-block;
-  box-sizing: border-box;
-  animation: rotation 1s linear infinite;
-  margin-top: 100px;
-  position: fixed;
-  left: 50%;
+  position: relative;
+  top: 80px;
+  left: 650px;
+  animation: rotate 1s linear infinite;
 }
 
-@keyframes rotation {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
-}
-
-.container {
-  display: flex;
-  margin: 0 auto;
-}
-
-.gallery {
-  margin: 50px;
-  display: flex;
-  flex-wrap: wrap;
-  gap: 24px;
-}
-
-.gallery-item {
-  flex-shrink: 0;
-  flex-basis: calc((100% - 48px) / 3);
-  display: flex;
-  flex-direction: column;
-  border: 1px solid #808080;
-}
-
-.gallery-image {
-  width: 100%;
-  height: 300px;
-  object-fit: cover;
-}
-
-.stats {
-  flex-shrink: 0;
-  display: flex;
-  justify-content: space-around;
-  border-bottom: 1px solid #808080;
-  border-left: 1px solid #808080;
-  border-right: 1px solid #808080;
-  background: #fff;
-  padding-bottom: 11px;
-  height: 48px;
-}
-
-.text {
-  text-align: center;
-  font-weight: 600;
-  font-size: 12px;
-  line-height: 1.33;
-  letter-spacing: 0.04em;
-  color: #2e2f42;
-  padding-bottom: 11px;
+.load {
+  background: #4e75ff;
+  border-radius: 8px;
+  width: 125px;
+  height: 40px;
+  display: none;
+  justify-content: center;
+  align-items: center;
+  border: none;
+  color: #fff;
+  margin: 40px auto;
 }
